Video Sequencer Proxies don't take into account Strip Input Offset (or strip modifiers) #39141

Closed
opened 2014-03-12 20:52:32 +01:00 by bassam kurdali · 7 comments
Member

System Information
Fedora Linux 64 bit / Intel CPU / Nvidia GPU

Blender Version
Broken: all versions that have proxies
Worked: this never worked :)

Short Description of Errof
If you use strip offset in the VSE to correct aspect ratio of e.g. cinematic aspect ratio clips in HD, the proxies are often incorrect

Exact steps for others to reproduce the error
1-Ok first you have to download and unpack proxies.zip, keeping the filepaths intact (internally it is using relative paths)
2-there is a 4 frame 1920x804 greycube.avi, and two images redcube.jpg and bluecube.jpg (same rez)
3-open the blend file edith_piaf.blend which is set to 1920x1080
4- switch between proxy 25% and Scene render size observing the following errors:
5- greycube.avi turns into a tiny thumbnail (unless you uncheck 'image offset' in strip input
6- redube.jpg gets offset twice (unless you uncheck 'image offset' in strip input
7- bluecube.jpg acts like redcube.jpb + the strip modifier gets double calculated - you can fix this by turning off modifiers during proxy calculation.

what should happen of course is that the strips should look much the same (but lower rez) when they are proxified.
proxies.zip

**System Information** Fedora Linux 64 bit / Intel CPU / Nvidia GPU **Blender Version** Broken: all versions that have proxies Worked: this never worked :) **Short Description of Errof** If you use strip offset in the VSE to correct aspect ratio of e.g. cinematic aspect ratio clips in HD, the proxies are often incorrect **Exact steps for others to reproduce the error** 1-Ok first you have to download and unpack proxies.zip, keeping the filepaths intact (internally it is using relative paths) 2-there is a 4 frame 1920x804 greycube.avi, and two images redcube.jpg and bluecube.jpg (same rez) 3-open the blend file edith_piaf.blend which is set to 1920x1080 4- switch between proxy 25% and Scene render size observing the following errors: 5- greycube.avi turns into a tiny thumbnail (unless you uncheck 'image offset' in strip input 6- redube.jpg gets offset twice (unless you uncheck 'image offset' in strip input 7- bluecube.jpg acts like redcube.jpb + the strip modifier gets double calculated - you can fix this by turning off modifiers during proxy calculation. what should happen of course is that the strips should look much the same (but lower rez) when they are proxified. [proxies.zip](https://archive.blender.org/developer/F80868/proxies.zip)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @BassamKurdali

Added subscriber: @BassamKurdali
Sergey Sharybin self-assigned this 2014-03-12 20:56:48 +01:00

This issue was referenced by blender/blender-addons-contrib@3fc293cd57

This issue was referenced by blender/blender-addons-contrib@3fc293cd5718a70044438efea3514d6fb50e8a2c

This issue was referenced by 3fc293cd57

This issue was referenced by 3fc293cd5718a70044438efea3514d6fb50e8a2c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3fc293cd57.

Closed by commit 3fc293cd57.
Author
Member

awesome sergey!! thanks a bunch :)

awesome sergey!! thanks a bunch :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39141
No description provided.