Fix T39141: Video Sequencer Proxies don't take into account Strip Input Offset (or strip modifiers)

Basically issue was caused by the fact that strip for proxy has been
post-processed but proxy files were considered pre-processed. This lead
to situation of postprocessing being applied twice.